--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                 <img class="img-fluid" src="img/class1.png" alt="..." style="margin-bottom: 20px;" />
             </div>
             <div class="col-lg-6" style="margin-top:120px; padding-left:20px">
-                <h2 class="mb-5">"Your journey is not late, it’s just different, and that’s okay."</h2>
+                <h2 class="mb-5">"You are building a future every time you choose not to give up"</h2>
             </div>
         </div>
     </div>
