--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                                         <td>Tyler Sauls</td>
                                         <td class="text-end">
                                             <a href="https://tylersauls.github.io/Assignment-1-The-Freshman-Experienc-/" target="_blank" class="btn btn-sm text-white" role="button" style="background-color:#119da4"><i class="bi bi-eye"></i>&nbsp; 30MFF Project</a>
-                                            <a href="" target="_blank" class="btn btn-sm text-white" role="button" style="background-color:#119da4"><i class="bi bi-eye"></i>&nbsp; Personal Portfolio</a>
+                                            <a href="https://tylersauls.github.io/Portfolio/" target="_blank" class="btn btn-sm text-white" role="button" style="background-color:#119da4"><i class="bi bi-eye"></i>&nbsp; Personal Portfolio</a>
                                         </td>
                                     </tr>
                                     <tr>
