--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                                         <td>Jennie Lee</td>
                                         <td class="text-end">
                                             <a href="https://jennnielee.github.io/assignment1/" target="_blank" class="btn btn-sm text-white" role="button" style="background-color:#119da4"><i class="bi bi-eye"></i>&nbsp; 30MFF Project</a>
-                                            <a href="" target="_blank" class="btn btn-sm text-white" role="button" style="background-color:#119da4"><i class="bi bi-eye"></i>&nbsp; Personal Portfolio</a>
+                                            <a href="https://jennnielee.github.io/jennie-lee-portfolio/" target="_blank" class="btn btn-sm text-white" role="button" style="background-color:#119da4"><i class="bi bi-eye"></i>&nbsp; Personal Portfolio</a>
                                         </td>
                                     </tr>
                                     <tr>
